class AlcanceSismo:

    def __init__(self, descripcion, nombre):
        self.descripcion = descripcion
        self.nombre = nombre
