class ClasificacionSismo:
    def __init__(self, kmProfundidadDesde, kmProfundidadHasta, nombre):
        self.kmProfundidadDesde = kmProfundidadDesde
        self.kmProfundidadHasta = kmProfundidadHasta
        self.nombre = nombre