class OrigenDeGeneracion:

    def __init__(self, descripcion, nombre):
        self.descripcion = descripcion
        self.nombre = nombre