package clases_entidad;

public class DetalleMuestraSismica {
    private float valor;
    private TipoDeDato tipoDeDato;

    public DetalleMuestraSismica(float valor, TipoDeDato tipoDeDato) {
        this.valor = valor;
        this.tipoDeDato = tipoDeDato;
    }
}
