package clases_entidad;

public class Estado {
    private String ambito;
    private String nombreEstado;
}
