package clases_entidad;

public class MagnitudRicher {
    private String descripcionMagnitud;
    private float numero;

    public MagnitudRicher(String descripcionMagnitud, float numero) {
        this.descripcionMagnitud = descripcionMagnitud;
        this.numero = numero;
    }
}
