package clases_entidad;

public class MotivoTipo {
    private String descripcion;

    public MotivoTipo(String descripcion) {
        this.descripcion = descripcion;
    }
}
