package clases_entidad;

public class Rol {
    private String descripcionRol;
    private String nombre;

    public Rol(String descripcionRol, String nombre) {
        this.descripcionRol = descripcionRol;
        this.nombre = nombre;
    }
}
