package clases_entidad;

public class TipoDeDato {
    private String denominacion;
    private String nombreUnidadMedida;
    private float valorUmbral;
}
