@startuml

class EventoSismico{
    - fechaHoraFin
    - fechaHoraOcurrencia
    - latitudEpicentro
    - latitudHipocentro
    - longitudEpicentro
    - longitudHipocentro
    - valorMagnitud
    - clasificacion: ClasificacionSismo
    - magnitud: MagnitudRicher
    - origenGeneracion: OrigenDeGeneracion
    - alcanceSismo: AlcanceSismo
    - estadoActual: Estado
    - cambioEstado: CambioEstado
    - serieTemporal: SerieTemporal

    --
    +getAlcance()
    +getClasificacion()
    +getFechaOcurrencia()
    +getLatitudEpicentro()
    +getLatitudHipocentro()
    +getLongitudEpicentro()
    +getLongitudHipocentro()
    +getOrigen()
    +getValorMagnitud()
    +new()
}




class ClasificacionSismo{
    -kmProfundidadDesde
    -kmProfundidadHasta
    -nombre
    --
    +getNombre()
}

class MagnitudRicher{
    -descripcionMagnitud
    -numero
}

class OrigenDeGeneracion{
    -descripcion
    -nombre
    --
    +getNombre()
}

class AlcanceSismo{
    -descripcion
    -nombre
    --
    +getNombre()
}

class Estado{
    -ambito
    -nombreEstado
    --
    +new()
}

class Empleado{
    -apellido
    -mail
    -nombre
    -telefono
    -rol: Rol
    --
    +esResponsableDeReparacion()
    +obtenerMail()
}

class Rol{
    -descripcionRol
    -nombre
    --
    +getNombreRol()
}

class CambioEstado{
    -fechaHoraFin
    -fechaHoraInicio
    -estado: Estado
    -empleadoResponsable: Empleado
    -motivoFueraServicio: MotivoFueraServicio
    --
    +esEstadoActual()
    +new()
    +setFechaHoraFin()
}

class MotivoFueraServicio{
    -comentario
    -motivoTipo: MotivoTipo
    --
    +new()
}

class MotivoTipo{
    -descripcion
    --
    +getDescripcion()
}

class SerieTemporal{
    -condicionAlarma
    -fechaHoraInicioRegistroMuestras
    -fechaHoraRegistro
    -frecuenciaMuestreo
    -muestraSismica: MuestraSismica
    --
    +getDatos()
    +new()
}

class MuestraSismica{
    -fechaHoraMuestra
    -detalleMuestraSismica: DetalleMuestraSismica
    --
    +crearDetalleMuestra()
    +getDatos()
    +new()
}

class DetalleMuestraSismica{
    -valor
    -tipoDeDato: TipoDeDato
    --
    +getDatos()
    +new()
}

class TipoDeDato{
    -denominacion
    -nombreUnidadMedida
    -valorUmbral
    --
    +esTuDenominacion()
    +getDenominacion()
}

EventoSismico --> ClasificacionSismo: 1
EventoSismico --> MagnitudRicher: 1
EventoSismico --> OrigenDeGeneracion: 1
EventoSismico --> AlcanceSismo: 1
EventoSismico --> Estado: 1
EventoSismico --> Empleado: 1
EventoSismico --> CambioEstado: 1..*
EventoSismico --> SerieTemporal: 1..*
SerieTemporal *-> MuestraSismica: 1..*
MuestraSismica *--> DetalleMuestraSismica: 1..*
DetalleMuestraSismica -> TipoDeDato: 1
CambioEstado --> Estado: 1
CambioEstado --> MotivoFueraServicio: 0..*
MotivoFueraServicio -> MotivoTipo: 1
CambioEstado --> Empleado: 1
Empleado --> Rol: 1


@enduml0